--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="homebox">
 	<head>
 		<meta charset="utf-8" />
 		<meta
@@ -40,7 +40,7 @@
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-neutral-950 text-neutral-200 antialiased">
+	<body data-sveltekit-preload-data="hover" class="bg-base-100 text-base-content antialiased">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
