--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="homebox">
+<html lang="en" data-theme="homebox" style="color-scheme: dark">
 	<head>
 		<meta charset="utf-8" />
 		<meta
