--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="homebox" style="color-scheme: dark">
+<html lang="en" data-theme="homebox" style="color-scheme: dark; background-color: #0a0a0f;">
 	<head>
 		<meta charset="utf-8" />
 		<meta
@@ -10,6 +10,18 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
 		<meta name="theme-color" content="#1a1025" />
+		<!-- Fallback CSS for dark theme (loads before any other CSS) -->
+		<style>
+			/* Fallback colors if DaisyUI fails to load */
+			:root, [data-theme="homebox"] {
+				--b1: 0.059 0 0; /* #0a0a0f in oklch */
+				--b2: 0.094 0.01 285; /* #13131f */
+				--b3: 0.145 0.015 285; /* #1e1e2e */
+				--bc: 0.95 0.01 250; /* #f1f5f9 */
+				color-scheme: dark;
+			}
+			html, body { background-color: #0a0a0f; color: #f1f5f9; }
+		</style>
 		<!-- Inline theme script: runs before render to prevent flash of wrong theme -->
 		<script>
 			(function() {
@@ -57,7 +69,7 @@
 		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-base-100 text-base-content antialiased">
+	<body data-sveltekit-preload-data="hover" class="bg-base-100 text-base-content antialiased" style="background-color: #0a0a0f; color: #f1f5f9;">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
